# gotelem

./: .gitignore  broker.go  broker_test.go  can_adapter.go  can_sqlite.go  db.go  db_test.go  frame.go  frame_gen.go  frame_gen_test.go  frame_kind.go  gen_skylab.go  go.mod  go.sum  http.go  http_test.go  main.go  migration.go  migration_test.go  openmct.go  readme.md  skylab_logger.go
can/: can.go  can_test.go  frame.go  frame_kind.go
cmd/: root.go  server.go  xbee.go
db/: can_adapter.go
migrations/: 1_initial_up.sql  2_addl_tables_down.sql  2_addl_tables_up.sql  3_weather_down.sql  4_import_table_up.sql  5_add_packets_down.sql  5_add_packets_up.sql  6_bus_index_column_down.sql  6_bus_index_column_up.sql  7_domainobject_down.sql  7_domainobject_up.sql
mprpc/: rpc.go  rpc_msg.go  rpc_msg_gen.go  rpc_msg_gen_test.go  rpc_test.go  rpcconntrack.go
py/: Hello_.ini  README.md  backend.py  optimus.py  pyproject.toml  skylab.py
py/notebooks/: hacking.py  test_solar.ipynb
py/pytelem/: backend.py  bms.py  gui.py  gui_log.py  optimus.py  pytelem.py  skylab.py  skylab_attr.py
py/pytelem/widgets/: smart_display.py
py/templates/c/: skylab.h.jinja2
skylab/: gen_skylab.go  make_skylab.go  skylab.go  skylab_gen.go  skylab_gen_test.go  skylab_msgp.go  skylab_msgp_gen.go  skylab_msgp_gen_test.go
socketcan/: netlink.go  socketcan.go  socketcan_test.go
web/: eslint.config.js  jsconfig.json  package-lock.json  package.json  tsconfig.json  webpack.common.js  webpack.config.js  webpack.dev.js  webpack.prod.js
xbee/: api_frame.go  api_frame_test.go  at.go  at_test.go  (+7 more)
(+59 files in other folders)
