[tool.poetry]
name = "pytelem"
version = "0.1.0"
description = "A python helper tool for gotelem"
authors = ["saji <saji@saji.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
orjson = "^3.8.14"
imgui-bundle = "^0.8.5"
numpy = "^1.24.3"
aiohttp = "^3.8.4"
pyside6 = "^6.5.0"
pydantic = "^1.10.9"
pyyaml = "^6.0"
jinja2 = "^3.1.2"
pyqtgraph = "^0.13.3"
scipy = "^1.10.1"
numba = "^0.57.0"
jax = {extras = ["cpu"], version = "^0.4.12"}
matplotlib = "^3.7.2"
glom = "^23.3.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
pytest = "^7.3.2"
types-pyyaml = "^6.0.12.10"
ipykernel = "^6.23.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
pytelem = "pytelem:main"
